S20SS2FAVE-77 Adding text and image to main page - CSS for image is still not centered, attempting to fix

--- a/application/static/stylesheet.css
+++ b/application/static/stylesheet.css
@@ -72,7 +72,8 @@
 
 #homeLogo{
 	display: block;
-	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 5px;
 }
 
